--- a/package.json
+++ b/package.json
@@ -12,12 +12,29 @@
   "activationEvents": [],
   "main": "./out/extension.js",
   "contributes": {
-    "commands": [
-      {
-        "command": "gittriggered.helloWorld",
-        "title": "Hello World"
+    "configuration": {
+      "title": "Git Triggered",
+      "properties": {
+        "gitTriggered.packagesToNotify": {
+          "type": "array",
+          "description": "List of files to watch and commands to run when they change.",
+          "items": {
+            "type": "object",
+            "properties": {
+              "file": {
+                "type": "string",
+                "description": "The relative path of the file to watch."
+              },
+              "command": {
+                "type": "string",
+                "description": "The command to run when the file changes."
+              }
+            }
+          },
+          "default": []
+        }
       }
-    ]
+    }
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
