Rename extension from Git Triggered to TriggerMate and enhance file watching functionality

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gittriggered",
+  "name": "triggermate",
   "displayName": "TriggerMate",
   "description": "Automates tasks based on file updates.",
   "publisher": "tobiaswust",
