--- a/package.json
+++ b/package.json
@@ -71,21 +71,21 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/tobiaswust/triggermate"
+    "url": "https://github.com/Daniel-Leontiev/triggermate"
   },
   "bugs": {
     "url": "https://github.com/tobiaswust/triggermate/issues"
   },
   "homepage": "https://wust.dev",
   "devDependencies": {
-    "@types/vscode": "^1.97.0",
+    "@types/vscode": "^1.99.1",
     "@types/mocha": "^10.0.10",
-    "@types/node": "20.x",
-    "@typescript-eslint/eslint-plugin": "^8.22.0",
-    "@typescript-eslint/parser": "^8.22.0",
-    "eslint": "^9.19.0",
-    "typescript": "^5.7.3",
+    "@types/node": "^22.14.0",
+    "@typescript-eslint/eslint-plugin": "^8.29.1",
+    "@typescript-eslint/parser": "^8.29.1",
+    "eslint": "^9.24.0",
+    "typescript": "^5.8.3",
     "@vscode/test-cli": "^0.0.10",
-    "@vscode/test-electron": "^2.4.1"
+    "@vscode/test-electron": "^2.5.2"
   }
 }
