--- a/package.json
+++ b/package.json
@@ -53,6 +53,39 @@
                 "type": "boolean",
                 "description": "Automatically execute the command without asking for confirmation.",
                 "default": false
+              },
+              "commandType": {
+                "type": "string",
+                "description": "The type of command to execute (terminal or task).",
+                "default": "terminal",
+                "enum": [
+                  "terminal",
+                  "task"
+                ],
+                "enumDescriptions": [
+                  "Execute the command in a terminal.",
+                  "Execute the command as a task."
+                ]
+              },
+              "ignoreCreateEvents": {
+                "type": "boolean",
+                "description": "Ignore file creation events.",
+                "default": true
+              },
+              "ignoreChangeEvents": {
+                "type": "boolean",
+                "description": "Ignore file change events.",
+                "default": false
+              },
+              "ignoreDeleteEvents": {
+                "type": "boolean",
+                "description": "Ignore file deletion events.",
+                "default": true
+              },
+              "commandDebounce": {
+                "type": "number",
+                "description": "The number of milliseconds to wait before executing the next command for the same file.",
+                "default": 0
               }
             }
           },
@@ -71,7 +104,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Daniel-Leontiev/triggermate"
+    "url": "https://github.com/tobiaswust/triggermate"
   },
   "bugs": {
     "url": "https://github.com/tobiaswust/triggermate/issues"
